--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -64,7 +64,7 @@ Holder.addTheme("gray", {
         <div class="card-deck">
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -72,7 +72,7 @@ Holder.addTheme("gray", {
             </div>
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -80,7 +80,7 @@ Holder.addTheme("gray", {
             </div>
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -94,7 +94,7 @@ Holder.addTheme("gray", {
         <div class="card-deck card-deck-flex">
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -102,7 +102,7 @@ Holder.addTheme("gray", {
             </div>
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -110,7 +110,7 @@ Holder.addTheme("gray", {
             </div>
             <div class="card">
                 <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-                <div class="card-block">
+                <div class="card-body">
                     <h4 class="card-title">Card title</h4>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -123,7 +123,7 @@ Holder.addTheme("gray", {
     <div class="card-deck card-deck-flex">
         <div class="card">
             <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-            <div class="card-block">
+            <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -131,7 +131,7 @@ Holder.addTheme("gray", {
         </div>
         <div class="card">
             <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-            <div class="card-block">
+            <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -139,7 +139,7 @@ Holder.addTheme("gray", {
         </div>
         <div class="card">
             <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-            <div class="card-block">
+            <div class="card-body">
                 <h4 class="card-title">Card title</h4>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -160,22 +160,22 @@ Holder.addTheme("gray", {
     <div class="card-deck-wrapper">
         <div class="card-deck">
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 1
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 2
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 3
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 4
                 </div>
             </div>
@@ -186,22 +186,22 @@ Holder.addTheme("gray", {
     <div class="card-deck-wrapper">
         <div class="card-deck card-deck-flex">
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 1
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 2
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 3
                 </div>
             </div>
             <div class="card">
-                <div class="card-block">
+                <div class="card-body">
                     Card 4
                 </div>
             </div>
@@ -211,22 +211,22 @@ Holder.addTheme("gray", {
     flex (no wrapper):
     <div class="card-deck card-deck-flex">
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 Card 1
             </div>
         </div>
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 Card 2
             </div>
         </div>
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 Card 3
             </div>
         </div>
         <div class="card">
-            <div class="card-block">
+            <div class="card-body">
                 Card 4
             </div>
         </div>
@@ -240,7 +240,7 @@ Holder.addTheme("gray", {
     <div class="card-group">
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -248,7 +248,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -256,7 +256,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -268,7 +268,7 @@ Holder.addTheme("gray", {
     <div class="card-group card-group-flex">
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -276,7 +276,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -284,7 +284,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card">
         <img class="card-img-top" data-src="holder.js/100px150/?text=Image Cap" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -301,7 +301,7 @@ Holder.addTheme("gray", {
       <div class="card-deck card-deck-flex">
         <div class="card card-flex">
           <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-block">
+          <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
@@ -311,7 +311,7 @@ Holder.addTheme("gray", {
         </div>
         <div class="card card-flex">
           <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-block">
+          <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           </div>
@@ -321,7 +321,7 @@ Holder.addTheme("gray", {
         </div>
         <div class="card card-flex">
           <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
-          <div class="card-block">
+          <div class="card-body">
             <h4 class="card-title">Card title</h4>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
           </div>
@@ -337,7 +337,7 @@ Holder.addTheme("gray", {
     <div class="card-group card-group-flex">
       <div class="card card-flex">
         <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
@@ -347,7 +347,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card card-flex">
         <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
@@ -357,7 +357,7 @@ Holder.addTheme("gray", {
       </div>
       <div class="card card-flex">
         <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">Card title</h4>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
