--- a/test/visual/flexbox-grid.html
+++ b/test/visual/flexbox-grid.html
@@ -27,10 +27,6 @@
     background-color: rgba(34,68,102,.15);
     border: 1px solid rgba(34,68,102,.2);
 }
-.row-flex > [class^="col-"],
-.row-flex > .col {
-    background-color: rgba(102,0,102,.15);
-}
 </style>
 
 </head>
@@ -51,78 +47,34 @@
     <h1>Figuration Grid Examples</h1>
     <p class="lead">Basic grid layouts to help get you familiar with building within the grid system.</p>
 
-    <p>
-        Here we are testing the two different styles for grid layouts using the opt-in flexbox classes.
-        They are designated as follows:
-    </p>
-    <ul>
-        <li><strong>normal:</strong> float model</li>
-        <li><strong>flex:</strong> opt-in flexbox model</li>
-    </ul>
-
     <h2>Five grid tiers</h2>
     <p>There are five tiers to the grid system, one for each range of devices we support. Each tier starts at a minimum viewport size and automatically applies to the larger devices unless overridden.</p>
 
-    normal:
     <div class="row">
-      <div class="col-4">.col-4</div>
-      <div class="col-4">.col-4</div>
-      <div class="col-4">.col-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
       <div class="col-4">.col-4</div>
       <div class="col-4">.col-4</div>
       <div class="col-4">.col-4</div>
     </div>
 
-    normal:
     <div class="row">
-      <div class="col-sm-4">.col-sm-4</div>
-      <div class="col-sm-4">.col-sm-4</div>
-      <div class="col-sm-4">.col-sm-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
       <div class="col-sm-4">.col-sm-4</div>
       <div class="col-sm-4">.col-sm-4</div>
       <div class="col-sm-4">.col-sm-4</div>
     </div>
 
-    normal:
     <div class="row">
-      <div class="col-md-4">.col-md-4</div>
-      <div class="col-md-4">.col-md-4</div>
-      <div class="col-md-4">.col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
       <div class="col-md-4">.col-md-4</div>
       <div class="col-md-4">.col-md-4</div>
       <div class="col-md-4">.col-md-4</div>
     </div>
 
-    normal:
     <div class="row">
-      <div class="col-lg-4">.col-lg-4</div>
-      <div class="col-lg-4">.col-lg-4</div>
-      <div class="col-lg-4">.col-lg-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
       <div class="col-lg-4">.col-lg-4</div>
       <div class="col-lg-4">.col-lg-4</div>
       <div class="col-lg-4">.col-lg-4</div>
     </div>
 
-    normal:
     <div class="row">
-      <div class="col-xl-4">.col-xl-4</div>
-      <div class="col-xl-4">.col-xl-4</div>
-      <div class="col-xl-4">.col-xl-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
       <div class="col-xl-4">.col-xl-4</div>
       <div class="col-xl-4">.col-xl-4</div>
       <div class="col-xl-4">.col-xl-4</div>
@@ -130,14 +82,7 @@
 
     <h2>Three equal columns</h2>
     <p>Get three equal-width columns <strong>starting at desktops and scaling to extra large desktops</strong>. On mobile devices, tablets and below, the columns will automatically stack.</p>
-    normal:
     <div class="row">
-        <div class="col-md-4">.col-md-4</div>
-        <div class="col-md-4">.col-md-4</div>
-        <div class="col-md-4">.col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-md-4">.col-md-4</div>
         <div class="col-md-4">.col-md-4</div>
         <div class="col-md-4">.col-md-4</div>
@@ -145,14 +90,7 @@
 
     <h2>Three unequal columns</h2>
     <p>Get three columns <strong>starting at desktops and scaling to extra large desktops</strong> of various widths. Remember, grid columns should add up to twelve for a single horizontal block. More than that, and columns start stacking no matter the viewport.</p>
-    normal:
     <div class="row">
-        <div class="col-md-3">.col-md-3</div>
-        <div class="col-md-6">.col-md-6</div>
-        <div class="col-md-3">.col-md-3</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-md-3">.col-md-3</div>
         <div class="col-md-6">.col-md-6</div>
         <div class="col-md-3">.col-md-3</div>
@@ -160,13 +98,7 @@
 
     <h2>Two columns</h2>
     <p>Get two columns <strong>starting at desktops and scaling to extra large desktops</strong>.</p>
-    normal:
     <div class="row">
-        <div class="col-md-8">.col-md-8</div>
-        <div class="col-md-4">.col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-md-8">.col-md-8</div>
         <div class="col-md-4">.col-md-4</div>
     </div>
@@ -179,19 +111,7 @@
     <h2>Two columns with two nested columns</h2>
     <p>Per the documentation, nesting is easy&mdash;just put a row of columns within an existing column. This gives you two columns <strong>starting at desktops and scaling to extra large desktops</strong>, with another two (equal widths) within the larger column.</p>
     <p>At mobile device sizes, tablets and down, these columns and their nested columns will stack.</p>
-    normal:
     <div class="row">
-        <div class="col-md-8">
-            .col-md-8
-            <div class="row">
-                <div class="col-md-6">.col-md-6</div>
-                <div class="col-md-6">.col-md-6</div>
-            </div>
-        </div>
-        <div class="col-md-4">.col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-md-8">
             .col-md-8
             <div class="row">
@@ -207,37 +127,18 @@
     <h2>Mixed: mobile and desktop</h2>
     <p>The grid system has five tiers of classes: xs (extra small), sm (small), md (medium), lg (large), and xl (extra large). You can use nearly any combination of these classes to create more dynamic and flexible layouts.</p>
     <p>Each tier of classes scales up, meaning if you plan on setting the same widths for xs and sm, you only need to specify xs.</p>
-    normal:
     <div class="row">
-        <div class="col-12 col-md-8">.col-12 .col-md-8</div>
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-12 col-md-8">.col-12 .col-md-8</div>
         <div class="col-6 col-md-4">.col-6 .col-md-4</div>
     </div>
 
-    normal:
     <div class="row">
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-6 col-md-4">.col-6 .col-md-4</div>
         <div class="col-6 col-md-4">.col-6 .col-md-4</div>
         <div class="col-6 col-md-4">.col-6 .col-md-4</div>
     </div>
 
-    normal:
     <div class="row">
-        <div class="col-6">.col-6</div>
-        <div class="col-6">.col-6</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-6">.col-6</div>
         <div class="col-6">.col-6</div>
     </div>
@@ -245,25 +146,12 @@
     <hr />
 
     <h2>Mixed: mobile, tablet, and desktop</h2>
-    normal:
     <div class="row">
-        <div class="col-12 col-sm-6 col-lg-8">.col-12 .col-sm-6 .col-lg-8</div>
-        <div class="col-6 col-lg-4">.col-6 .col-lg-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-12 col-sm-6 col-lg-8">.col-12 .col-sm-6 .col-lg-8</div>
         <div class="col-6 col-lg-4">.col-6 .col-lg-4</div>
     </div>
 
-    normal:
     <div class="row">
-        <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
-        <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
-        <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
         <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
         <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
         <div class="col-6 col-sm-4">.col-6 .col-sm-4</div>
@@ -273,88 +161,33 @@
 
     <h2>Column clearing</h2>
     <p>Use <a href="../layout/grid/#example-responsive-column-resets">responsive column resets</a> at specific breakpoints to prevent awkward wrapping with uneven content.</p>
-    normal:
     <div class="row">
-        <div class="col-6 col-sm-3">
-            .col-6 .col-sm-3
+        <div class="col-4 col-sm-3">
+            .col-4 .col-sm-3
             <br />
             Resize your viewport or check it out on your phone for an example.
         </div>
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
+        <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
 
         <!-- Add the extra clearfix for only the required viewport -->
         <div class="clearfix d-sm-none"></div>
 
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-    </div>
-    flex:
-    <div class="row row-flex">
-        <div class="col-6 col-sm-3">
-            .col-6 .col-sm-3
-            <br />
-            Resize your viewport or check it out on your phone for an example.
-        </div>
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-
-        <!-- Add the extra clearfix for only the required viewport -->
-        <div class="w-100 d-sm-none"></div>
-
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
-        <div class="col-6 col-sm-3">.col-6 .col-sm-3</div>
+        <div class="col-4 col-sm-3">.col-4 .col-sm-3</div>
+        <div class="col-8 col-sm-3">.col-8 .col-sm-3</div>
     </div>
 
     <hr />
 
     <h2>Offset, push, and pull resets</h2>
     <p>Reset offsets, pushes, and pulls at specific breakpoints.</p>
-    normal:
     <div class="row">
         <div class="col-sm-5 col-md-6">.col-sm-5 .col-md-6</div>
         <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">.col-sm-5 .offset-sm-2 .col-md-6 .offset-md-0</div>
     </div>
-    flex:
-    <div class="row row-flex">
-        <div class="col-sm-5 col-md-6">.col-sm-5 .col-md-6</div>
-        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">.col-sm-5 .offset-sm-2 .col-md-6 .offset-md-0</div>
-    </div>
 
-    normal:
     <div class="row">
         <div class="col-sm-6 col-md-5 col-lg-6">.col-sm-6 .col-md-5 .col-lg-6</div>
         <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">.col-sm-6 .col-md-5 .offset-md-2 .col-lg-6 .offset-lg-0</div>
-    </div>
-    flex:
-    <div class="row row-flex">
-        <div class="col-sm-6 col-md-5 col-lg-6">.col-sm-6 .col-md-5 .col-lg-6</div>
-        <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">.col-sm-6 .col-md-5 .offset-md-2 .col-lg-6 .offset-lg-0</div>
-    </div>
-
-    <hr />
-
-    <h2>Nested float/flex Examples</h2>
-
-    normal:
-    <div class="row">
-        <div class="col-md-8">
-            .col-md-8
-            <div class="row row-flex">
-                <div class="col-md-6">.col-md-6<br />more</div>
-                <div class="col-md-6">.col-md-6</div>
-            </div>
-        </div>
-        <div class="col-md-4">.col-md-4</div>
-    </div>
-    flex:
-    <div class="row row-flex">
-        <div class="col-md-8">
-            .col-md-8
-            <div class="row">
-                <div class="col-md-6">.col-md-6<br />more</div>
-                <div class="col-md-6">.col-md-6</div>
-            </div>
-        </div>
-        <div class="col-md-4">.col-md-4</div>
     </div>
 
     <hr />
@@ -364,7 +197,7 @@
     <p>When flexbox is enabled, you can utilize breakpoint specific column classes for equal width columns.</p>
 
     <code>xs</code> breakpoint
-    <div class="row row-flex">
+    <div class="row">
         <div class="col">
             1 of 2
         </div>
@@ -374,7 +207,7 @@
     </div>
 
     <code>md</code> breakpoint
-    <div class="row row-flex">
+    <div class="row">
         <div class="col-md">
             1 of 3
         </div>
@@ -387,7 +220,7 @@
     </div>
 
     <code>xs</code> breakpoint
-    <div class="row row-flex">
+    <div class="row">
         <div class="col">
             1 of 5
         </div>
@@ -409,7 +242,7 @@
 
     <h2>Vertical Flex Alignment</h2>
 
-    <div class="row row-flex flex-items-start">
+    <div class="row flex-items-start">
         <div class="col">
             <code>.flex-*-items-start</code>
         </div>
@@ -421,7 +254,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-items-center">
+    <div class="row flex-items-center">
         <div class="col">
             <code>.flex-*-items-center</code>
         </div>
@@ -433,7 +266,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-items-end">
+    <div class="row flex-items-end">
         <div class="col">
             <code>.flex-*-items-end</code>
         </div>
@@ -445,7 +278,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-items-stretch">
+    <div class="row flex-items-stretch">
         <div class="col">
             <code>.flex-*-items-stretch</code>
         </div>
@@ -457,14 +290,14 @@
         </div>
     </div>
 
-    <div class="row row-flex" style="height: 7rem;">
-        <div class="col flex-self-top">
+    <div class="row" style="height: 7rem;">
+        <div class="col flex-self-start">
             align top
         </div>
-        <div class="col flex-self-middle">
+        <div class="col flex-self-center">
             align middle
         </div>
-        <div class="col flex-self-bottom">
+        <div class="col flex-self-end">
             align bottom
         </div>
         <div class="col flex-self-stretch">
@@ -474,7 +307,7 @@
 
     <h2>Horizontal Flex Alignment</h2>
 
-    <div class="row row-flex flex-left">
+    <div class="row flex-start">
         <div class="col-4">
             aligned to
         </div>
@@ -483,7 +316,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-center">
+    <div class="row flex-center">
         <div class="col-4">
             aligned to
         </div>
@@ -492,7 +325,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-right">
+    <div class="row flex-end">
         <div class="col-4">
             aligned to
         </div>
@@ -501,7 +334,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-around">
+    <div class="row flex-around">
         <div class="col-4">
             aliged to
         </div>
@@ -510,7 +343,7 @@
         </div>
     </div>
 
-    <div class="row row-flex flex-between">
+    <div class="row flex-between">
         <div class="col-4">
             aligned to
         </div>
